Add JS bundle [9]

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>crate digger</title>
-    <script defer="defer" src="{{ url_for('static', filename='main.ae8bf0fc.js') }}"></script>
-    <link href="{{ url_for('static', filename='main.74817fb6.css') }}" rel="stylesheet">
+    <script type="text/javascript" src="{{ url_for('static', filename='main.ae8bf0fc.js') }}"></script>
+    <!-- <link href="{{ url_for('static', filename='main.74817fb6.css') }}" rel="stylesheet"> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
