--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <link href="{{ url_for('static', filename='main.74817fb6.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/main.74817fb6.css') }}" rel="stylesheet">
 
-    <script type="text/javascript" src="{{ url_for('static', filename='main.ae8bf0fc.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/main.ae8bf0fc.js') }}"></script>
   </body>
 </html>
