--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,29 @@
 <html lang="en">
   <head>
     <title>crate digger</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <script defer="defer" src="{{ url_for('static', filename='js/main.ae8bf0fc.js') }}"></script>
+    <link href="{{ url_for('static', filename='css/main.74817fb6.css') }}" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <link href="{{ url_for('static', filename='css/main.74817fb6.css') }}" rel="stylesheet">
-
-    <script type="text/javascript" src="{{ url_for('static', filename='js/main.ae8bf0fc.js') }}"></script>
   </body>
 </html>
+
+<!-- <!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width,initial-scale=1"/>
+        <meta name="theme-color" content="#000000"/>
+        <meta name="description" content="Web site created using create-react-app"/>
+        <title>Rand phatitka Avin Avin!</title>
+        <script defer="defer" src="/static/js/main.ae8bf0fc.js"></script>
+        <link href="/static/css/main.74817fb6.css" rel="stylesheet">
+    </head>
+    <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root"></div>
+    </body>
+</html> -->
