Add JS bundle [23]

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="icon" href="{{ url_for('static', filename='media/favicon.ico') }}" />
+    <link rel="apple-touch-icon" href="{{ url_for('static', filename='media/apple-touch-icon.png') }}" />
     <title>crate digger</title>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <script defer="defer" src="{{ url_for('static', filename='js/main.30d12e99.js') }}"></script>
+    <script defer="defer" src="{{ url_for('static', filename='js/main.dd0c1c1c.js') }}"></script>
     <link href="{{ url_for('static', filename='css/main.d19ba67e.css') }}" rel="stylesheet">
   </head>
   <body>
